--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,11 +1,9 @@
 check_PROGRAMS = test
 test_LDADD = $(top_builddir)/src/libmagic.la
 
-check-local:
-	MAGIC=$(top_builddir)/magic/magic ./test
-	for i in $(TEST_BASES); do MAGIC=./$$i.magic ./test ./$$i.testfile ./$$i.result; done
-
-TEST_BASES = gedcom
-
 EXTRA_DIST = \
 	*.magic *.testfile *.result
+
+check-local:
+	MAGIC=$(top_builddir)/magic/magic ./test
+	for i in *.testfile; do MAGIC=./$${i%%.testfile}.magic ./test ./$$i ./$${i%%.testfile}.result; done
