--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -4,6 +4,7 @@ test_LDADD = $(top_builddir)/src/libmagic.la
 EXTRA_DIST = \
 	gedcom.magic gedcom.testfile gedcom.result
 
+T = $(top_srcdir)/tests
 check-local:
 	MAGIC=$(top_builddir)/magic/magic ./test
-	for i in *.testfile; do MAGIC=./$${i%%.testfile}.magic ./test ./$$i ./$${i%%.testfile}.result; done
+	for i in $T/*.testfile; do MAGIC=$T/$${i%%.testfile}.magic $(top_builddir)/tests/test $T/$$i $T/$${i%%.testfile}.result; done
